--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 *{
     background-color: #fff7f3;
     margin: 0;
     padding: 0;
+    font-family: 'Open Sans', sans-serif;
 }
 .maanedbog{
     background-color: #fefdf9;
@@ -9,11 +11,53 @@
 .harry{
     background-color: #fef2f2;
 }
+.btn, .bogcover{
+    box-shadow: 10px 10px 30px 1px rgba(0, 0, 0, 0.3);
+}
+a{
+    text-decoration: none;
+    color: #333;
+}
 
 /* Header */
 header h1{
     color: #fe7d4e;
 }
-header h1{
-    color: #333;
+.headflex{
+    display: flex;
+    justify-content: space-between;
+    padding: 30px 150px;
+}
+#menu{
+    display: grid;
+    grid-template-columns: repeat(4, auto);
+    place-items: center;
+    column-gap: 30px;
+}
+.opbrug{
+    color: #fe7d4e;
+    border-radius: 50px;
+    padding: 15px 30px;
+}
+
+/* hero */
+.hero img{
+    height: 900px;
+    width: 100%;
+    object-fit: cover;
+    object-position: 0% 60%;
+    filter: brightness(60%);
+}
+.hero{
+    position: relative;
+}
+.hero p{
+    position: absolute;
+    top: 333.5px;
+    right: 476.5px;
+    background: none;
+    color: #fff;
+    text-align: center;
+    font-size: 25px;
+    width: 950px;
 }
