--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -30,6 +30,7 @@ a{
 header h1{
     color: #333;
     display: inline;
+    font-size: 25px;
 }
 .headflex{
     display: flex;
@@ -38,8 +39,8 @@ header h1{
 }
 #menu{
     display: grid;
-    grid-template-columns: repeat(4, auto);
-    place-items: center;
+    grid-template-rows: repeat(4, auto);
+    place-items: center end;
     column-gap: 30px;
     font-weight: 800;
     font-size: larger;
@@ -270,6 +271,141 @@ footer{
 }
 
 /* media */
+@media screen and (min-width: 1000px) and (max-width: 1899px){
+    /* Header */
+    .headflex{
+        padding: 30px 150px;
+    }
+    #menu{
+        grid-template-columns: repeat(4, auto);
+        place-items: center;
+        column-gap: 30px;
+        font-weight: 800;
+        font-size: larger;
+    }
+    .opbrug{
+        padding: 15px 30px;
+    }
+    
+    /* hero */
+    .hero img{
+        height: 900px;
+    }
+    .hero p{
+        top: 333.5px;
+        right: 476.5px;
+        font-size: 25px;
+        width: 950px;
+    }
+    
+    /* main grid */
+    main{
+        grid-template: ". . ." 170px
+                       ". secondhand ." auto
+                       ". . ." 170px
+                       "maanbog maanbog maanbog" auto
+                       ". . ." 170px
+                       "bogklub bogklub bogklub" auto
+                       ". . ." 170px / 200px 1fr 200px;
+    }
+    
+    /* secondhand */
+    #gridtitle{
+        font-size: 33px;
+        font-weight: 900;
+    }
+    #visflere{
+        font-size: 20px;
+        font-weight: 900;
+    }
+    .secondhand{
+        grid-template: "title . . flere" auto
+                       "cover1 cover2 cover3 cover4" 500px / 1fr 1fr 1fr 1fr;
+        gap: 30px 74px;
+    }
+    
+    /* måneds bog */
+    .harry div{
+        grid-template-columns: repeat(2, auto);
+        column-gap: 100px;
+    }
+    .overskrift{
+        font-size: 40px;
+    }
+    .forfatter{
+        font-weight: 700;
+        font-size: 20px;
+    }
+    .type{
+        font-weight: 700;
+        font-size: 20px;
+    }
+    .navn{
+        font-weight: 700;
+        font-size: 23px;
+    }
+    .typer{
+        font-weight: 700;
+        font-size: 23px;
+    }
+    .boginfo{
+        font-size: 20px;
+    }
+    .bestilbog .btn{
+        padding: 20px 40px;
+    }
+    .infoombog{
+        width: 536px;
+        grid-template: "overskrift overskrift" auto
+                       ". ." 20px
+                       "forfatter type" auto
+                       "navn typer" auto
+                       ". ." 50px
+                       "boginfo boginfo" auto
+                       ". ." 80px
+                       "bestilbog ." auto / 160px auto;
+        gap: 10px 30px;
+    }
+    .maanbog{
+        grid-template: "maan harry" auto / 627px 1254px;
+    }
+    .infoommaan div{
+        width: 240px;
+    }
+    
+    /* bogklub */
+    .bogklub p{
+        top: 45%;
+        right: 783px;
+        padding: 20px 50px;
+        font-size: larger;
+        font-weight: 700;
+    }
+    
+    /* footer */
+    .social{
+        place-self: end start;
+    }
+    .social img{
+        width: 50px;
+    }
+    .footgrid{
+        gap: 20px 100px;
+        grid-template: "hvor tid" auto
+                       "tlf social" auto
+                       "mail social" auto / max-content max-content;
+        font-size: 20px;
+    }
+    footer{
+        grid-template-columns: auto 580px;
+    }
+    .footgrid div p:first-child{
+        font-weight: 700;
+    }
+    .hvor h4{
+        font-size: 25px;
+    }
+}
 @media screen and (min-width: 1900px){
     /* Header */
     .headflex{
