--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 *{
-    max-width: 1900px;
+    max-width: 100vw;
     margin: 0;
     padding: 0;
     font-family: 'Open Sans', sans-serif;
@@ -35,10 +35,10 @@ header h1{
 .headflex{
     display: flex;
     justify-content: space-between;
-    padding: 30px 150px;
+    padding: 30px 100px;
 }
 #menu{
-    display: grid;
+    display: none;
     grid-template-rows: repeat(4, auto);
     place-items: center end;
     column-gap: 30px;
@@ -53,10 +53,57 @@ header h1{
 .overskrift h1:first-child{
     color: #fe7d4e;
 }
+/* hammenu */
+.ham{
+    position: relative;
+}
+.menu-btn{
+    height: 40px;
+    width: 40px;
+    opacity: 0;
+    position: absolute;
+    top: 5px;
+    right: -50px;
+    z-index: 7;
+}
+.div1, .div2, .div3{
+    display: inline;
+    height: 10px;
+    width: 40px;
+    background-color: black;
+    position: absolute;
+    right: -50px;
+    top: 20px;
+    transition: all 1s;
+}
+.div1{
+    top: 5px;
+}
+.div3{
+    top: 35px;
+}
+.menu-btn:checked ~ .div1{
+    top: 20px; transform: rotateZ(45deg);
+}
+.menu-btn:checked ~ .div2{
+    opacity: 0;
+}
+.menu-btn:checked ~ .div3{
+    top: 20px; transform: rotateZ(-45deg);
+}
+.menu-btn:checked ~ #menu{
+    display: grid;
+    position: absolute;
+    top: 80px;
+    right: -100px;
+    background-color: #fef2f2;
+    z-index: 10;
+    padding: 10px;
+}
 
 /* hero */
 .hero img{
-    height: 900px;
+    height: 300px;
     width: 100%;
     object-fit: cover;
     object-position: 0% 60%;
@@ -67,13 +114,13 @@ header h1{
 }
 .hero p{
     position: absolute;
-    top: 333.5px;
-    right: 476.5px;
+    top: 9.5px;
+    right: 30px;
     background: none;
     color: #fff;
     text-align: center;
-    font-size: 25px;
-    width: 950px;
+    font-size: 16px;
+    width: 300px;
 }
 
 /* main grid */
@@ -88,20 +135,20 @@ header h1{
 }
 main{
     display: grid;
-    grid-template: ". . ." 170px
+    grid-template: ". . ." 50px
                    ". secondhand ." auto
-                   ". . ." 170px
+                   ". . ." 50px
                    "maanbog maanbog maanbog" auto
-                   ". . ." 170px
+                   ". . ." 50px
                    "bogklub bogklub bogklub" auto
-                   ". . ." 170px / 200px 1fr 200px;
+                   ". . ." 50px / 25px 1fr 25px;
     place-items: center;
 }
 
 /* secondhand */
 #gridtitle{
     grid-area: title;
-    font-size: 33px;
+    font-size: 20px;
     font-weight: 900;
 }
 #visflere{
@@ -124,9 +171,13 @@ main{
 }
 .secondhand{
     display: grid;
-    grid-template: "title . . flere" auto
-                   "cover1 cover2 cover3 cover4" 500px / 1fr 1fr 1fr 1fr;
-    gap: 30px 74px;
+    grid-template: "title flere" auto
+                   "cover1 cover2" 175px
+                   "cover3 cover4" 175px / 1fr 1fr;
+    gap: 30px 30px;
+}
+.secondhand img{
+    height: 175px;
 }
 
 /* måneds bog */
@@ -141,10 +192,13 @@ main{
     display: grid;
     place-items: center;
 }
+.harry img{
+    width: 200px;
+}
 .harry div{
     display: grid;
     place-items: center;
-    grid-template-columns: repeat(2, auto);
+    grid-template-rows: repeat(2, auto);
     column-gap: 100px;
 }
 .overskrift{
@@ -189,7 +243,7 @@ main{
     border-radius: 50px;
 }
 .infoombog{
-    width: 536px;
+    width: 100vw;
     display: grid;
     grid-template: "overskrift overskrift" auto
                    ". ." 20px
@@ -203,7 +257,8 @@ main{
 }
 .maanbog{
     display: grid;
-    grid-template: "maan harry" auto / 627px 1254px;
+    grid-template: "maan" auto
+                   "harry" auto / auto;
 }
 .infoommaan div{
     width: 240px;
@@ -216,12 +271,12 @@ main{
 .bogklub p{
     position: absolute;
     top: 45%;
-    right: 783px;
+    left: 40px;
     background-color: #fe7d4e;
     color: #fff;
-    padding: 20px 50px;
+    padding: 20px 20px;
     border-radius: 50px;
-    font-size: larger;
+    font-size: 16px;
     font-weight: 700;
 }
 
@@ -243,16 +298,17 @@ main{
     place-self: end start;
 }
 .social img{
-    width: 50px;
+    width: 30px;
 }
 .footgrid{
     place-self: center;
-    display: inline-grid;
-    gap: 20px 100px;
+    display: grid;
+    gap: 20px 10px;
     grid-template: "hvor tid" auto
                    "tlf social" auto
                    "mail social" auto / max-content max-content;
-    font-size: 20px;
+    font-size: 13px;
+    padding: 10px;
 }
 footer{
     display: grid;
@@ -264,14 +320,17 @@ footer{
 }
 .hvor h4{
     display: inline;
-    font-size: 25px;
+    font-size: 16px;
 }
 .hvor h4:first-child{
     color: #fe7d4e;
 }
+footer > img{
+    display: none;
+}
 
 /* media */
-@media screen and (min-width: 1000px) and (max-width: 1899px){
+@media screen and (min-width: 769px) and (max-width: 1899px){
     /* Header */
     .headflex{
         padding: 30px 150px;
@@ -408,10 +467,14 @@ footer{
 }
 @media screen and (min-width: 1900px){
     /* Header */
+    header h1{
+        font-size: 50px;
+    }
     .headflex{
         padding: 30px 150px;
     }
     #menu{
+        display: grid;
         grid-template-columns: repeat(4, auto);
         place-items: center;
         column-gap: 30px;
@@ -420,6 +483,19 @@ footer{
     }
     .opbrug{
         padding: 15px 30px;
+    }
+    /* hammenu */
+    .menu-btn, .div1, .div2, .div3{
+        display: none;
+    }
+    .menu-btn:checked ~ #menu{
+        display: grid;
+        position: static;
+        top: 80px;
+        right: -100px;
+        background: none;
+        z-index: auto;
+        padding: 0;
     }
     
     /* hero */
@@ -458,11 +534,17 @@ footer{
                        "cover1 cover2 cover3 cover4" 500px / 1fr 1fr 1fr 1fr;
         gap: 30px 74px;
     }
+    .secondhand img{
+        height: auto;
+    }
     
     /* måneds bog */
     .harry div{
         grid-template-columns: repeat(2, auto);
         column-gap: 100px;
+    }
+    .harry img{
+        width: 300px;
     }
     .overskrift{
         font-size: 40px;
@@ -511,7 +593,7 @@ footer{
     /* bogklub */
     .bogklub p{
         top: 45%;
-        right: 783px;
+        left: 783px;
         padding: 20px 50px;
         font-size: larger;
         font-weight: 700;
@@ -539,5 +621,8 @@ footer{
     }
     .hvor h4{
         font-size: 25px;
+    }
+    footer img{
+        display: inline;
     }
 }
