--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -41,7 +41,7 @@ header h1{
     display: none;
     grid-template-rows: repeat(4, auto);
     place-items: center end;
-    column-gap: 30px;
+    gap: 30px;
     font-weight: 800;
     font-size: larger;
 }
