--- a/stylesheet/style.css
+++ b/stylesheet/style.css
@@ -25,6 +25,18 @@ a{
     text-decoration: none;
     color: #333;
 }
+main a{
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    width: max-content;
+}
+
+/* svg */
+svg{
+    width: 20px;
+    height: 20px;
+}
 
 /* Header */
 header h1{
@@ -330,6 +342,11 @@ footer > img{
 
 /* media */
 @media screen and (min-width: 769px){
+    /* svg */
+    svg{
+        width: 50px;
+        height: 50px;
+    }
     /* Header */
     header h1{
         font-size: 50px;
